--- a/src/Pages/Dashboard/StatCard.module.css
+++ b/src/Pages/Dashboard/StatCard.module.css
@@ -1,9 +1,8 @@
 .card {
   display: flex; 
   align-items: center;
-  padding: 0.7rem;
-  width: 40%;
-  height: 8%;
+  padding: 1rem;
+  width: 20rem;
   border-radius: 0.75rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
@@ -30,13 +29,21 @@
 
 .info {
   display: flex;
+  flex-direction: row;
+}
+.infotext{
+  display: flex;
   flex-direction: column;
 }
 
+.infochange{
+  margin-bottom: 0;
+  margin-top: 3rem;
+}
 .title {
   font-size: 1rem;
+  font-weight: bold;
   color:black;
-  margin-bottom: 0.25rem;
 }
 
 .value {
