--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -2,11 +2,12 @@
 .main-container-box {
   width: 100vw;
   height: 100vh;
-  background: radial-gradient(
-    circle at 150% 50%,
+  /* background: radial-gradient(
+    circle at 200% 20%,
     var(--light-green-gradient),
     var(--dark-green)
-  );
+  ); */
+  background: var(--dark-green);
   display: flex;
   align-items: center;
   justify-items: center;
@@ -22,9 +23,11 @@
   gap: 0;
 }
 .form {
+  /* display: none; */
   width: 34%;
   height: 100%;
   background-color: var(--clr-white);
+  box-shadow: -10px 0px 100px  var(--logo-color);
 }
 
 /* GREEN SIDE STYLING WITH TEXT AND IMAGES */
@@ -397,7 +400,7 @@
     display: flex;
     flex-direction: column;
     z-index: 2;
-  }
+  }v
 
   .text-on-green h1 {
     font-size: 1.1rem !important;
