--- a/src/Pages/DailyDelivery/DailyDelivery.module.css
+++ b/src/Pages/DailyDelivery/DailyDelivery.module.css
@@ -1,5 +1,4 @@
 .tableContainerOuter {
-  /* overflow-x: auto; */
     background-color:var(--clr-white); 
     padding-left:2rem ;
     padding-right: 2rem;
@@ -9,6 +8,7 @@
     border-radius: 8px;
 }
 .tableContainer{
+  overflow-x: auto;
    border-top-left-radius: 0 !important;
    background-clip: padding-box;
 }
@@ -19,9 +19,6 @@
   border-radius: 8px;
   overflow: hidden;
   width: 100%;
-  /* border: 1px solid #ccc;  */
-  /* width: 100%; */
-  /* border-collapse: collapse; */
    border: 1px solid #ddd;
    background: #fbf8f8;
     box-shadow: 1rem var(--darker-gray);
@@ -270,4 +267,11 @@
   border: solid white;
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
+}
+.noResults {
+  padding: 2rem;
+  text-align: center;
+  color: #666;
+  font-size: 1.2rem;
+  margin-top: 1rem;
 }
