--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ html {
   margin: 0px;
   padding: 0px;
   font-family: "Poppins", sans-serif;
-  transition: 300ms all ease-out;
+  /* transition: 300ms all ease-out; */
 }
 
 :root {
