--- a/src/Components/RiderStepper.module.css
+++ b/src/Components/RiderStepper.module.css
@@ -371,6 +371,25 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   border-radius: 15px;
   transition: background 0.3s ease;
 }
+/* SELECT STYLING */
+.option_container{
+  padding: 0.75rem 1rem;
+  width: 100%;
+  height: 4rem;
+  color: var(--clr-black);
+  border: 1px solid var(--main-theme);
+  background-color: var(--clr-white);
+  border-radius: 1.1rem;
+  font-size: 1rem;
+}
+.option_container select{
+  border: none;
+  background: transparent;
+}
+.option_container select:focus{
+  border: none;
+  outline: none;
+}
 
 /* PASSWORD STYLING */
 .Account-details-password {
