--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -7,7 +7,7 @@
     var(--light-green-gradient),
     var(--dark-green)
   ); */
-  background: var(--dark-green);
+  background: var(--main-theme);
   display: flex;
   align-items: center;
   justify-items: center;
@@ -27,7 +27,7 @@
   width: 34%;
   height: 100%;
   background-color: var(--clr-white);
-  box-shadow: -10px 0px 100px  var(--logo-color);
+  box-shadow: 10p;
 }
 
 /* GREEN SIDE STYLING WITH TEXT AND IMAGES */
@@ -144,9 +144,69 @@
   width: 100%;
   height: 100%;
   padding: 30% 13% 30% 15%;
+  box-shadow: -15px 0px 120px rgb(150, 255, 195);
+}
+/* RADIO BUTTON STYLING */
+.radio-button-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 9px;
+  margin: 8px;
 }
 
-/* RADIO BUTTON STYLING */
+.radio-button {
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.radio-button input[type="radio"] {
+  display: none;
+}
+
+.radio-button label {
+  padding-left: 30px;
+  cursor: pointer;
+  position: relative;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.radio-button label::before {
+  content: "";
+  width: 15px;
+  height: 15px;
+  border: 2px solid #ccc;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.radio-button input[type="radio"]:checked + label::before {
+  border-color: var(--main-theme);
+  background-color: var(--main-theme);
+  box-shadow: inset 0 0 0 3px #fff;
+}
+
+.radio-button input[type="radio"]:checked  label::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  position: absolute;
+  left: 4px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #fff;
+  display: none;
+}
+
+
+
+/* RADIO BUTTON STYLING
 .radio-button-group {
   display: flex;
   flex-direction: row;
@@ -202,7 +262,7 @@
   transform: translateY(-50%);
   background-color: #fff;
   display: none;
-}
+} */
 
 /* .radio-button input[type="radio"]:checked + label::after {
   display: flex;
@@ -382,6 +442,17 @@
   color: var(--dark-green);
   text-decoration:underline;
   cursor: pointer;
+}
+.remember-me{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 2.1rem;
+}
+.remember-me p{
+  color: gray;
+  font-size: larger;
+  cursor:pointer;
 }
 
 
