--- a/src/Pages/Dashboard/StatCard.module.css
+++ b/src/Pages/Dashboard/StatCard.module.css
@@ -6,6 +6,7 @@
   border-radius: 0.75rem;
   box-shadow: 0 4px 6px rgba(19, 19, 19, 0.1);
   transition: transform 0.2s;
+  position: relative;
 }
 
 .card:hover {
@@ -32,9 +33,14 @@
 }
 
 .title {
+
   position: absolute;
-  display: inline-block;
+  top: 5px;
+  left: 50px;
+  /* right: 4px; */
+  /* display: inline-block; */
   font-size: 0.8em;
+  /* font-size: 8.8em; */
   color:black;
 }
 
