--- a/src/Layouts/HomeLayout.css
+++ b/src/Layouts/HomeLayout.css
@@ -12,6 +12,7 @@
   /* display: flex;
   flex-direction: column; */
   height: 100vh;
+  position: relative;
 }
 
 /* LOGO AREA */
@@ -31,14 +32,15 @@
   object-fit: contain;
 }
 
-/* LINKS AREA */
-/* .links {
-  padding-top: 1.5rem;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-} */
+.link_container{
+  margin-top: 2.3rem;
+  width: 100%;
+  height: 73%;
+  /* height: 43%; */
+  /* background-color: yellow; */
+  overflow-y: auto;
+}
+
  .links {
   padding-top: 1.5rem;
   flex-grow: 1;
@@ -61,7 +63,8 @@
 } */
 /* LOGOUT BUTTON */
 .logout-botton {
-  width: 100%;
+  /* width: 100%; */
+  width: 16.25%;
   max-height: 6rem;
   color: var(--clr-white);
   display: flex;
@@ -74,6 +77,11 @@
   border-bottom: 0.2rem solid var(--clr-white);
   margin-top: 14.3rem;
   cursor:pointer;
+  position: fixed;
+  top: 70%;
+}
+.logout-botton:hover{
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* RIGHT SECTION */
@@ -129,3 +137,4 @@
   padding: 2em;
   background-color: var(--main-theme-gray);
 }
+/* .working-box */
