--- a/src/Components/SideLink.css
+++ b/src/Components/SideLink.css
@@ -13,6 +13,11 @@
   /* border-top: 0.1rem solid var(--clr-white);
   border-bottom: 0.2rem solid var(--clr-white); */
 }
+.Link:hover {
+  background-color: rgba(0,0,0, 0.2);
+  border-top: 0.1px solid var(--clr-white);
+  border-bottom: 0.1px solid var(--clr-white);
+}
 .Link a {
   text-decoration: none;
   color: var(--clr-white);
@@ -66,3 +71,68 @@ a {
   padding: 2.5rem;
   margin-left: -1.2rem;
 }
+.spacer {
+  flex-grow: 1;
+}
+
+/* **** */
+.children-container {
+
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0,0,0, 0.2);
+}
+
+.child-link {
+  display: flex;
+  width:100%;
+  align-items: center;
+  padding: 0.5rem 0;
+  padding-left: 3rem;
+  font-size: 1.4rem;
+  color: white;
+  text-decoration: none;
+  height: 4.1rem;
+}
+
+.child-link:hover{
+  background-color: rgba(0,0,0, 0.2);
+  border-top: 0.1px solid var(--clr-white);
+  border-bottom: 0.1px solid var(--clr-white);
+}
+
+.child-link.active {
+  font-weight: 400;
+  background-color: rgba(0,0,0, 0.8);
+  border-top: 0.1px solid var(--clr-white);
+  border-bottom: 0.1px solid var(--clr-white);
+}
+.chevron-button {
+  padding: 0.5rem;
+  border-radius: 50%;
+  transition: background-color 0.2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chevron-button:hover,
+.chevron-button:focus {
+  background-color: rgba(255, 255, 255, 0.1); /* light gray effect */
+  cursor: pointer;
+}
+
+.down-icon {
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.down-icon.rotate {
+  transform: rotate(180deg);
+}
+
+
+
+
+
+
