--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -64,7 +64,7 @@
   margin: 0;
 }
 .man-box img {
-  display: none;
+  /* display: none; */
   width: 100%;
   height: 100%;
   object-fit: fill;
@@ -133,7 +133,7 @@
   font-style: normal;
   padding: 2.5rem 0 0 0;
   margin: 0px;
-  line-height: 1;
+  line-height: 1.3;
   white-space: normal;
   /* display: relative;
   top: -27rem; */
