--- a/src/Pages/DailyDelivery/DailyDelivery.module.css
+++ b/src/Pages/DailyDelivery/DailyDelivery.module.css
@@ -129,7 +129,7 @@
 }
 
 .overviewtext{
-    font-size: 0.5em;
+    font-size: 10px;
     margin-left: 0.9rem;
     margin-bottom: 1rem;
 }
@@ -155,7 +155,9 @@
   border: none;
   border-radius: 1rem;
   cursor: pointer;
+  display: flex;
   align-items: center;
+  justify-content: space-around;
   width: 15rem;
   padding: 0.8rem;
 }
@@ -170,7 +172,7 @@
   z-index: 10;
   border-radius: 1rem;
   overflow: hidden;
-  min-width: 100px;
+  min-width: 120px;
 }
 
 .dropdownItem {
@@ -194,7 +196,9 @@
   border: none;
   border-radius: 1rem;
   cursor: pointer;
+  display: flex;
   align-items: center;
+  justify-content: space-around;
    width: 15rem;
   padding: 0.8rem;
 }
@@ -209,7 +213,7 @@
   z-index: 10;
   border-radius: 4px;
   overflow: hidden;
-  min-width: 160px;
+  min-width: 180px;
   padding: 8px;
   display: flex;
   flex-direction: column;
