--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -130,7 +130,7 @@
     font-weight: bold;
 }
 .overviewtext{
-    font-size: 0.5em;
+    font-size: 10px;
     margin-left: 0.9rem;
     margin-bottom: 1rem;
 }
@@ -157,11 +157,13 @@
   border: none;
   border-radius: 1rem;
   cursor: pointer;
+  display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 15rem;
   padding: 0.8rem;
 }
+
 
 .dropdownMenu {
   position: absolute;
@@ -171,9 +173,9 @@
   border: 1px solid #e5e7eb;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 10;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   overflow: hidden;
-  min-width: 100px;
+  min-width: 120px;
 }
 
 .dropdownItem {
@@ -197,8 +199,9 @@
   border: none;
   border-radius: 1rem;
   cursor: pointer;
+  display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
    width: 15rem;
   padding: 0.8rem;
 }
@@ -213,7 +216,7 @@
   z-index: 10;
   border-radius: 4px;
   overflow: hidden;
-  min-width: 160px;
+  min-width: 180px;
   padding: 8px;
   display: flex;
   flex-direction: column;
