--- a/src/Pages/Dashboard/StatCard.module.css
+++ b/src/Pages/Dashboard/StatCard.module.css
@@ -1,8 +1,8 @@
 .card {
   display: flex; 
   align-items: center;
-  padding: 1rem;
-  width: 20rem;
+  padding:0.5rem 1rem;
+  /* width: 25rem; */
   border-radius: 0.75rem;
   box-shadow: 0 4px 6px rgba(19, 19, 19, 0.1);
   transition: transform 0.2s;
@@ -20,11 +20,11 @@
   display: flex;
   /* align-items: center; */
   /* justify-content: center; */
-  margin-right: 1rem;
+  margin-right: 0.7rem;
 }
 
 .icon {
-  font-size: 2em;
+  font-size: 1em;
   color: black;
 }
 
@@ -39,13 +39,14 @@
   left: 50px;
   /* right: 4px; */
   /* display: inline-block; */
-  font-size: 0.8em;
-  /* font-size: 8.8em; */
+  font-size: 1em;
+  font-weight:400;
   color:black;
 }
 
 .value {
-  font-size: 1.2em;
+  /* font-size: 1.2em; */
+   font-size: 2em;
   font-weight: bolder;
   color: #1e293b;
 }
