--- a/src/Pages/Search/NewDelivery.css
+++ b/src/Pages/Search/NewDelivery.css
@@ -1,9 +1,15 @@
 .new-delivery {
     background-color: white;
-    padding: 2rem;
-    width: 60%;
-    border-radius: 1.2rem;
+    padding-left: 2rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+    width: 55%;
+    display: flex;
+     border-radius: 0.8rem;
     text-align: center;
+   
+   
   }
   
   
