--- a/src/Pages/Search/Search.css
+++ b/src/Pages/Search/Search.css
@@ -15,24 +15,24 @@
 
 .searchcontent {
   display: flex;
-  gap: 5rem;
+  gap: 2rem;
 }
 .control-right{
   display: grid;
-  width: 40%;
+  width: 45%;
 }
 
 .control_container {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 80%;
+  height: 90%;
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
   background-color:white;
-  border-radius: 1.2rem;
+  border-radius: 0.8rem;
 }
 
 .date__controls {
@@ -88,23 +88,26 @@
   text-align: left;
   background-color: #fff;
   width: 100%;
-  padding: 2rem;
-  border-radius: 1.2rem;
+ padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-radius: 0.8rem;
 }
 
 .status__control label {
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: 1.5rem;
+  font-weight: bold;
   display: left;
 }
 
 .status__control input {
-  padding: 0.5rem;
-  border-radius: 1rem;
+  padding: 1.5rem;
+  border-radius: 0.8rem;
   border:0.2rem solid #ccc;
   width: 100%;
-  height: 5rem;
-  margin-top: 1rem;
+  height: 3em;
+  margin-top: 2px;
 }
 
 .btncontainer {
@@ -114,23 +117,33 @@
   margin-top: 10rem;
 }
 
-.resetbtn,
-.searchbtn {
-  width: 15rem;
-  height: 4rem;
-  border-radius: 1rem;
-  border: 0.2rem solid #ccc;
-  font-weight: 600;
+.resetbtn{
+   background-color:#FFFFFF;
+  color: var(--main-theme);
+  border: 1px solid var(--main-theme);
+  border-radius: 0.8rem;
   cursor: pointer;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+   width: 20%;
+  padding: 0.8rem;
 }
-
-.resetbtn {
-  background-color: var(--color-white);
-}
-
 .searchbtn {
-  background-color: var(--main-theme);
-  color: white;
+    background-color:var(--main-theme);
+     color: white;
+  border: 1px solid #e5e7eb;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+   width: 20%;
+  padding: 0.8rem;
 }
+
+
 
 
