--- a/src/Pages/Search/DeliveryForm.css
+++ b/src/Pages/Search/DeliveryForm.css
@@ -9,7 +9,7 @@
   
   .new-delivery__control label {
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: 600;
     margin-bottom: 0.5rem;
     display: block;
   }
