--- a/src/Pages/Search/Search.module.css
+++ b/src/Pages/Search/Search.module.css
@@ -1,16 +1,14 @@
 .overview {
   color: var(--clr-black);
-  font-size: 2rem;
-  margin-left: 1rem;
-  font-weight: bold;
+    font-size: 2em;
+    margin-left: 1rem;
+    font-weight: bold;
 }
 
 .overviewtext {
-  font-size: 0.9rem;
-  margin-left: 1rem;
-  margin-bottom: 1rem;
-  border-bottom: 2px solid #ddd;
-  padding-bottom: 0.5rem;
+   font-size: 10px;
+    margin-left: 0.9rem;
+    margin-bottom: 1rem;
 }
 
 .searchcontent {
@@ -56,23 +54,20 @@ input[type="date"] {
 }
 
 .calendar input {
-  width: 100%;
+  width: 27rem;
   border-radius: 0.8rem;
   border: 0.2rem solid #ccc;
+  padding-left: 4px;
+  padding-right: 4px;
  
 }
 
-
-/* .calendar {
-   width: 100%;
-   max-width: 100%;
-} */
 
 .to {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 6rem;
+  width: 4rem;
   height: 4.5rem;
   border: 0.2rem solid #ccc;
   border-radius: 0.8rem;
@@ -158,6 +153,10 @@ input[type="date"] {
    width: 20%;
   padding: 0.8rem;
 }
+.resetbtn:hover{
+   background-color: var(--input-background);
+  border-color: white;
+}
 .searchbtn {
     background-color:var(--main-theme);
      color: white;
@@ -171,7 +170,11 @@ input[type="date"] {
    width: 20%;
   padding: 0.8rem;
 }
-
+.searchbtn:hover{
+  background-color: #054231;
+  border-color: var(--main-theme);
+  
+}
 .tableContainerOuter {
     background-color:var(--clr-white); 
     padding-left:2rem ;
